--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
   color: rgb(15, 6, 6);
   background-color: #b575ff34;
   font-family: 'Oxygen', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /** HEADER **/
@@ -10,6 +13,8 @@ body {
   background-color: #6ffaff80;
   border-radius: 0;
   border: 0;
+  font-family: Copperplate, Papyrus, fantasy;
+  font-weight: bold;
 }
 
 #logo-img {
@@ -22,16 +27,17 @@ body {
 .navbar-brand {
   padding-top: 25px;
 }
-.navbar-brand h1 { /* Restaurant name */
-  font-family: 'Lora', serif;
+.navbar-brand div { /* Restaurant name */
+  /* <!-font-family: 'Lora', serif; */
   color: #a200ff;
-  font-size: 1.5em;
+  font-size: 3vh;
   text-transform: uppercase;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
+  /* text-shadow: 1px 1px 1px #222; */
+  margin-top: auto;
+  margin-bottom: auto;
   line-height: .75;
+  font-family: Copperplate, Papyrus, fantasy;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
@@ -79,7 +85,7 @@ body {
 
 /* FOOTER */
 .panel-footer {
-  margin-top: 30px;
+  margin-top: auto;
   padding-top: 35px;
   padding-bottom: 30px;
   color:#fff;
@@ -180,17 +186,137 @@ body {
  END MENU CATEGORIES PAGE */
 
 /* SOUND BATH PAGE */
-#main-content div {
+#main-content h1 {
+  font-family: Copperplate, Papyrus, fantasy;
   font-size: 50px;
   text-align: center;
 }
 
-#sbp img{
+#main-content h2 {
+  font-family: Copperplate, Papyrus, fantasy;
+  text-align: center;
+}
+
+#main-content h3 {
+  font-family: Copperplate, Papyrus, fantasy;
+  text-align: center;
+}
+
+/* #sbp img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+} */
+
+div p {
+  text-align: center;
+  margin: 20px;
 }
+  /* IMAGE SLIDESHOW  */
+* {box-sizing: border-box;}
+.mySlides {display: none;}
+img {vertical-align: middle  }
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+img {
+  width:  500px;
+  height: 500px;
+  object-fit: cover;
+}
+
+  /* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+  
+  /* Caption text */
+  /* .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  } */
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 6s;
+    animation-name: fade;
+    animation-duration: 6;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: 1} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: 1} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
+  /* END IMAGE SLIDESHOW */
+
 /* END SOUND BATH PAGE*/
 
 /* SINGLE CATEGORY PAGE */
