--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 body {
   font-size: 16px;
   color: rgb(15, 6, 6);
-  background-color: #b575ff34;
+  /* background-color: #b575ff34; */
+  background-color: #eee2fd;
   font-family: 'Oxygen', sans-serif;
   min-height: 100vh;
   display: flex;
@@ -19,12 +20,12 @@ body {
   font-weight: bold;
 }
 
-#logo-img {
+/* #logo-img {
   background: url('../images/restaurant-logo_large.png') no-repeat;
   width: 150px;
   height: 150px;
   margin: 10px 15px 10px 0;
-}
+} */
 .navbar-header {
   position: relative;
   width: 100%;
@@ -73,7 +74,7 @@ body {
   text-align: center;
 }
 #nav-list a:hover {
-  background: #E7E7E7;
+  background: #b575ff34;
 }
 #nav-list a span {
   font-size: 1.8em;
@@ -97,12 +98,25 @@ body {
 /* END HEADER */
 
 /* FOOTER */
+.row-center {
+  text-align: center;
+}
+
+.col-center {
+  display: inline-block;
+  float: none;
+}
+
+.col-md-auto {
+  width: auto;
+  padding: 0px;
+}
+
 .panel-footer {
-  margin-top: auto;
+  margin-top: 35px;
   padding-top: 35px;
   padding-bottom: 30px;
-  color:#fff;
-  background-color: #b575ff34;
+  background-color: #6ffaff80;
   border-top: 0;
 }
 .panel-footer .container{
@@ -111,122 +125,65 @@ body {
 .panel-footer div.row {
   margin-bottom: 35px;
 }
+
 .fa, .fab {
   font-size: 35px;
   color:#b575ff34;
+  position: relative;
+  top: 8px;
   /* color: #6ffaff; */
-  margin: 0px;
-  size: 35px 35px;
+  /* margin: 0px; */
+  /* size: 35px 35px; */
 }
+
 .fa span, .fab span{
   font-size: 15px;
   color: black;
-  font-weight: normal;
-  position: relative;
-  left: 5px;
-  top: 50%;
+  /* font-weight: normal; */
+  /* position: relative; */
+  /* left: 5px; */
+  /* top: 50%; */
 }
 
-#instagram, #tiktok{
-  padding-right: 4.37px;
-}
-
-#contact {
-  width: 100%;
+#contact div div{
+  /* box-sizing: border-box; */
+  /* float: left; */
+  padding: 0px;
+  margin-top: 10px;
+  text-align: center;
 }
 
 #contact a{
-  box-sizing: border-box;
-  float: left;
-  background-color: #6ffaff80;
-  width: 20%;
+  background: white;
+  background-color: #b575ff34;
   border-style: solid;
   border-width: 1px;
+  border-color: #0000003f;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
   margin: 1px;
+  margin-top: 10px;
 }
 
-#contact a i{
-  display: block;
+#contact a *{
+  color: #a200ff;
+  /* display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 10%;
+  width: 10%; */
 }
 
-#contact a div{
+#contact div a div{
   text-align: center;
-}
+} 
 /* END FOOTER */
 
 
-
 /* HOME PAGE */
-.container .jumbotron {
-  box-shadow: 0 0 50px #3F0C1F;
-  border: 2px solid #3F0C1F;
-}
 
-#menu-tile, #specials-tile, #map-tile {
-  height: 250px;
-  width: 100%;
-  margin-bottom: 15px;
-  position: relative;
-  border: 2px solid #3F0C1F;
-  overflow: hidden;
-}
-#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
-  box-shadow: 0 1px 5px 1px #cccccc;
-}
-#menu-tile {
-  background: url('../images/menu-tile.jpg') no-repeat;
-  background-position: center;
-}
-#specials-tile {
-  background: url('../images/specials-tile.jpg') no-repeat;
-  background-position: center;
-}
-#menu-tile span, #specials-tile span, #map-tile span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.6em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
-}
 /* END HOME PAGE */
 
-/* MENU CATEGORIES PAGE 
-.category-tile { 
-  position: relative;
-  border: 2px solid #3F0C1F;
-  overflow: hidden;
-  width: 200px;
-  height: 200px;
-  margin: 0 auto 15px;
-}
-.category-tile span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
-}
-.category-tile:hover {
-  box-shadow: 0 1px 5px 1px #cccccc;
-}
-
-#menu-categories-title + div {
-  margin-bottom: 50px;
-}
- END MENU CATEGORIES PAGE */
 
 /* SOUND BATH PAGE */
 #main-content h1 {
@@ -357,149 +314,28 @@ img {
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
-  .container .jumbotron {
-    background: url('../images/jumbotron_1200.jpg') no-repeat;
-    height: 675px;
-  }
+
 }
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
-  /* Header */
-  #logo-img {
-    background: url('../images/restaurant-logo_medium.png') no-repeat;
-    width: 100px;
-    height: 100px;
-    margin: 5px 5px 5px 0;
-  }
-  /* End Header */
 
-  /* Home Page */
-  .container .jumbotron {
-    background: url('../images/jumbotron_992.jpg') no-repeat;
-    height: 558px;
-  }
-  /* End Home Page */
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  /* Home Page */
-  .container .jumbotron {
-    background: url('../images/jumbotron_768.jpg') no-repeat;
-    height: 432px;
-  }
-  /* End Home Page */
-  .fab, .fa {
-    /* TODO: Move icons to center. Do this for XS devices as well */
-  }
-  i span {
-    display: none;
-  }
+  
 }
 
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-  /* Header */
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
-  }
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
-  }
-  .navbar-brand p { /* Kosher cert */
-    font-size: .6em;
-    margin-top: 12px;
-  }
-  .navbar-brand p img { /* Star-K */
-    height: 20px;
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-
-  #call-btn > a {
-    font-size: 1.5em;
-    display: block;
-    margin: 0 20px;
-    padding: 10px;
-    border: 2px solid #fff;
-    background-color: #f6b319;
-    color: #951c49;
-  }
-  #xs-deliver {
-    margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  /* End Header */
-
-  /* Footer */
-  .panel-footer section {
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  .panel-footer section:nth-child(3) {
-    margin-bottom: 0; /* margin already exists on the whole row */
-  }
-  .panel-footer section hr {
-    width: 50%;
-  }
-  /* End Footer */
-
-  /* Home Page */
-  .container .jumbotron {
-    margin-top: 30px;
-    padding: 0;
-  }
-  #menu-tile, #specials-tile {
-    width: 360px;
-    margin: 0 auto 15px;
-  }
-
-  .menu-item-photo {
-    margin-right: auto;
-  }
-  .menu-item-tile .menu-item-price {
-    text-align: center;
-  }
-  .menu-item-description {
-    text-align: center;;
-  }
+  
 }
 
 
 /********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
 @media (max-width: 479px) {
-  /* Header */
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 5px;
-    font-size: 6vw;
-  }
-  /* End Header */
   
-  /* Home page */
-  #menu-tile, #specials-tile {
-    width: 280px;
-    margin: 0 auto 15px;
-  }
-
-  .col-xxs-12 {
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-    float: left;
-    width: 100%;
-  }
 }
 
 
